Making some final changes to GET routes
