# routes/loans.js
@@ -10,8 +10,4 @@ router.get('/:loanId', loansController.getLoanById);
 
 router.post('/', loansController.createLoan);
 
-// router.get('/:userId', loansController.getLoanByUserId); // Trying with query params instead
-
-// router.get('/:bookId', loansController.getLoanByBookId); // Trying with query params instead
-
 module.exports = router;
